Ibrahim DEV/src/objects/recrutement__c.object
<CustomObject>
    <fields>
        <fullName>Code_Postal__c</fullName>
        <label>Code Postal</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duree__c</fullName>
        <label>Durée</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nom_annonce__c</fullName>
        <label>Nom annonce</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nombre_de_Postes__c</fullName>
        <label>Nombre de Postes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Statut__c</fullName>
        <label>Statut</label>
        <picklist>
            <picklistValues>
                <fullName>En Cours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terminé</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annulé</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_Contrat__c</fullName>
        <label>Type Contrat</label>
        <picklist>
            <picklistValues>
                <fullName>CDD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apprentissage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stage</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ville__c</fullName>
        <label>Ville</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>departement__c</fullName>
        <label>departement</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>region__c</fullName>
        <label>region</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>recrutement</label>
    <nameField>
        <label>recrutement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>recrutements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>